ckad/busybox-cmdargs.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-pod
  labels:
    app: busybox-app
    
spec:
  containers:
    - name: busybox
      image: busybox
      args: ["Hello World"]
      command: ["echo"]
