ckad/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    app: nginx-app
    
spec:
  containers:
    - name: nginx
      image: nginx
    - name: redis
      image: redis
  tolerations:
    - key: "spray"
      value: "ddt"
      effect: "NoExecute"
  nodeSelector:
    size: large
