ckad/webapp-color.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: webapp-color
  name: webapp-color
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp-color
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: webapp-color
    spec:
      containers:
      - image: kodekloud/webapp-color
        name: webapp-color
        ports:
        - containerPort: 8080
        resources: {}
status: {}
