ckad/webapp-pvc.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: webapp
  name: webapp
spec:
  containers:
  - image: kodekloud/event-simulator
    name: webapp
    resources: {}

    volumeMounts:
    - name: logstore
      mountPath: /log
  volumes:
  - name: logstore
    persistentVolumeClaim:
      claimName: claim-log-1

  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
