ckad/webapp-storage.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: webapp
  name: webapp
spec:
  containers:
  - image: kodekloud/event-simulator
    name: webapp
    resources: {}

    volumeMounts:
    - name: logstore
      mountPath: /log
  volumes:
  - name: logstore
    hostPath:
      path: /var/log/webapp
      type: Directory
    
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
