ckad/gb-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: guestbook-ingress
  namespace: guestbook
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: pieter
      http:
        paths:
          - path: /frontend
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend
                port:
                  number: 80
